# api

./: Cargo.toml  flake.nix
src/: config.rs  error.rs  main.rs  reqwest.rs  youtube.rs
src/app/: mod.rs
src/app/yt_embed/: mod.rs
